--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
+  "homepage": "http://dsterna.github.io/ordly",
   "scripts": {
     "start": "PORT=1337 react-scripts start",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
